# HappyDamsel

./: pyproject.toml
src/: app.py  content_parts.py  definitions.py  game.py  init_content.py  loader.py  loaders.py
src/choices/: __init__.py  generic.py
src/conditions/: __init__.py  common.py
src/effects/: __init__.py  common.py
src/renderers/: __init__.py  common.py
src/world/: choices.yaml  inventory.yaml  items.yaml  locations.yaml
