[project]
name = "happydamsel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.24.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "types-pyyaml>=6.0.12.20250915",
]
